src/objects/Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>API_Field_Impacted__c</fullName>
        <label>API Field Impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Display__c</fullName>
        <formula>TEXT(Incentive_Type__c)+&quot; &quot; + TEXT(Applicable_Aircraft__r.Aircraft_Type__c) + &quot; &quot; + TEXT(Quantity_Remaining__c) + &quot; / &quot; +  TEXT(Quantity_Provided__c)</formula>
        <label>Adjustment Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipName>Incentives2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>An indication of the parent Adjustment was applied to a transaction.</inlineHelpText>
        <label>Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_At_Measure__c</fullName>
        <label>Applies At Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Legs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applies_At__c</fullName>
        <label>Applies At</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Ratio__c</fullName>
        <label>Custom Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_Applied__c</fullName>
        <label>Formula Applied</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field for the contracted Aircraft if the adjustment only applies when moving FROM a specific aircraft and TO another specific Aircraft</inlineHelpText>
        <label>From Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Adjustments (From Aircraft)</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person this incentive belongs to if this is a split share</inlineHelpText>
        <label>Incentive Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Incentives2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Upgrade</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Upgrade</fullName>
                </value>
                <value>
                    <fullName>Special Upgrade Ratios</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Downgrade</fullName>
                </value>
                <value>
                    <fullName>Special Downgrade Ratios</fullName>
                </value>
                <value>
                    <fullName>Short Leg Waiver</fullName>
                </value>
                <value>
                    <fullName>Long Haul Credit</fullName>
                </value>
                <value>
                    <fullName>Bonus Hours</fullName>
                </value>
                <value>
                    <fullName>Discount MMF</fullName>
                </value>
                <value>
                    <fullName>Carry Fwd Hrs Annual</fullName>
                </value>
                <value>
                    <fullName>Carry Fwd Hrs Bonus</fullName>
                </value>
                <value>
                    <fullName>Early Contract Exit</fullName>
                </value>
                <value>
                    <fullName>Out Clause</fullName>
                </value>
                <value>
                    <fullName>Contract Extension</fullName>
                </value>
                <value>
                    <fullName>Cross Country Discount (OHF)</fullName>
                </value>
                <value>
                    <fullName>Flight Segment Waiver</fullName>
                </value>
                <value>
                    <fullName>Fuel Credit</fullName>
                </value>
                <value>
                    <fullName>Trade In Credit</fullName>
                </value>
                <value>
                    <fullName>Additional Hour Purchase</fullName>
                </value>
                <value>
                    <fullName>Peak Days</fullName>
                </value>
                <value>
                    <fullName>Other (See notes)</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Black Out Days</fullName>
                </value>
                <value>
                    <fullName>High Efficiency</fullName>
                </value>
                <value>
                    <fullName>Blackout Days</fullName>
                </value>
                <value>
                    <fullName>Additional/Extra Hours</fullName>
                </value>
                <value>
                    <fullName>Special Interchange Rate</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Aircraft</fullName>
                </value>
                <value>
                    <fullName>Fixed/Locked Rates</fullName>
                </value>
                <value>
                    <fullName>High Efficiency Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Adjustments_Needed__c</fullName>
        <label>Manual Adjustments Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Use__c</fullName>
        <label>Multi-Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Simultaneous_Usages__c</fullName>
        <label>Number of Simultaneous Usages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator Program</label>
        <referenceTo>Operator_Program__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Incentives_Notes__c</fullName>
        <inlineHelpText>Specifications for incentives if &quot;Other&quot; is chosen</inlineHelpText>
        <label>Other Incentives Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent adjustment</inlineHelpText>
        <label>Parent</label>
        <referenceTo>Adjustment__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipName>Incentives2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipName>Incentives2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Provided__c</fullName>
        <label>Quantity Provided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Remaining__c</fullName>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specific_Limitations__c</fullName>
        <inlineHelpText>If there are specific limitations that need to be noted, list them in this field.</inlineHelpText>
        <label>Specific Limitations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Use</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box ONLY if this is to be used as a template</inlineHelpText>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <label>Adjustment</label>
    <listViews>
        <fullName>All_Adjustment_Templates</fullName>
        <columns>NAME</columns>
        <columns>Applicable_Aircraft__c</columns>
        <columns>Incentive_Type__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Adjustment Templates</label>
    </listViews>
    <listViews>
        <fullName>FlexJet_Templates</fullName>
        <columns>NAME</columns>
        <columns>Applicable_Aircraft__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Incentive_Type__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>FlexJet</value>
        </filters>
        <label>FlexJet Templates</label>
    </listViews>
    <listViews>
        <fullName>NetJets_Templates</fullName>
        <columns>NAME</columns>
        <columns>Applicable_Aircraft__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Incentive_Type__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>NetJets</value>
        </filters>
        <label>NetJets Templates</label>
    </listViews>
    <nameField>
        <label>Adjustment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Contracted</fullName>
        <active>true</active>
        <label>Contracted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contracted_Adjustments_Must_Have_Client</fullName>
        <active>true</active>
        <description>Contracted RT Adjustments must be attached to an Account, Program, and/or Program Period. If this is a template for cloning, please use &quot;Template&quot; RT</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Contracted&quot;,AND(ISBLANK(Account__c),ISBLANK( Program__c),ISBLANK( Program_Period__c)))</errorConditionFormula>
        <errorMessage>Contracted RT Adjustments must be attached to an Account, Program, and/or Program Period. If this is a template for cloning, please use &quot;Template&quot; RT</errorMessage>
    </validationRules>
</CustomObject>